creusot/tests/should_succeed/simple_trigger.coma

module M_simple_trigger__id__Impl [#"../simple_trigger.rs" 10 0 10 20]
  let%span ssimple_trigger0 = "../simple_trigger.rs" 7 11 7 17
  let%span ssimple_trigger1 = "../simple_trigger.rs" 9 0 9 34
  let%span ssimple_trigger2 = "../simple_trigger.rs" 8 10 8 11
  
  use prelude.prelude.Int
  
  constant i  : int
  
  function id [#"../simple_trigger.rs" 10 0 10 20] (i : int) : int
  
  goal vc_id : ([%#ssimple_trigger0] i >= 0)
   -> (if i = 0 then
    [%#ssimple_trigger1] i = 0  -> 0 = 0
  else
    (([%#ssimple_trigger0] i - 1 >= 0)
    /\ 0 <= ([%#ssimple_trigger2] i) /\ ([%#ssimple_trigger2] i - 1) < ([%#ssimple_trigger2] i))
    /\ (([%#ssimple_trigger1] i - 1 = 0  -> id (i - 1) = 0)  -> ([%#ssimple_trigger1] i = 0  -> id (i - 1) + 1 = 0))
  )
end
module M_simple_trigger__test [#"../simple_trigger.rs" 19 0 19 13]
  let%span ssimple_trigger0 = "../simple_trigger.rs" 18 10 18 20
  let%span span1 = "../simple_trigger.rs" 7 11 7 17
  let%span span2 = "../simple_trigger.rs" 9 0 9 34
  let%span span3 = "../simple_trigger.rs" 8 10 8 11
  let%span span4 = "../simple_trigger.rs" 6 0 6 8
  
  use prelude.prelude.Int
  
  function id'0 [#"../simple_trigger.rs" 10 0 10 20] (i : int) : int
  
  function id'0_lim (i : int) : int
  
  axiom id'0_def : forall i : int [id'0 i] . id'0 i = ([%#span4] if i = 0 then 0 else id'0_lim (i - 1) + 1)
  
  axiom id'0_def_lim : forall i : int [id'0 i] . id'0 i = id'0_lim i
  
  axiom id'0_lim_spec : forall i : int [id'0_lim i] . ([%#span1] i >= 0)  -> ([%#span2] i = 0  -> id'0_lim i = 0)
  
  use prelude.prelude.Intrinsic
  
  meta "compute_max_steps" 1000000
  
  let rec test (_1:()) (return'  (ret:()))= (! bb0 [ bb0 = return' {_0} ] ) [ & _0 : () = any_l () ] 
    [ return' (result:())-> {[@expl:postcondition] [%#ssimple_trigger0] id'0 1 = 1} (! return' {result}) ]
    
end
